Fixing Z-index of Table Header

--- a/Admin/CSS/style.css
+++ b/Admin/CSS/style.css
@@ -188,21 +188,21 @@ th.sticky-right-1,
 td.sticky-right-1 {
   position: sticky;
   right: 0; /* Last column on the right */
-  z-index: 1030; /* High z-index to stay above other content */
+  z-index: 2; /* High z-index to stay above other content */
 }
 
 th.sticky-right-2,
 td.sticky-right-2 {
   position: sticky;
   right: 45px; /* Adjusted to match the width of the last column */
-  z-index: 1030;
+  z-index: 2;
 }
 
 /* Optional: Sticky header */
 th {
   position: sticky;
   top: 0;
-  z-index: 1030;
+  z-index: 2;
 }
 /* Sticky Column & Row */
 
